--- a/css/styles.css
+++ b/css/styles.css
@@ -235,19 +235,26 @@ border-radius: 0px 0px 4px 4px;
    padding-right: 16px;
    padding-top: 32px;
    padding-bottom: 32px;
-   background-color: rgba(0, 0, 0, 0.15);
 }
-.social-list-item {
-}
-.social-list-team {
+.social-list{
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: var(--primary-background-color);
+    gap: 10px;
+
 }
+.social-list-item {
+    height: 40px;
+    width: 40px;
+    
+}
+.social-list-link {
+    width: 100%;
+    height: 100%;
+    background-color: var(--primary-background-color); 
+    display: block;
+    border-radius: 50%;
+}
+    
 .social-list-icon {
    
 }
