add icon for team

--- a/css/styles.css
+++ b/css/styles.css
@@ -239,20 +239,21 @@ border-radius: 0px 0px 4px 4px;
 .social-list{
     display: flex;
     justify-content: center;
-    gap: 10px;
-
+    gap: 24px;
 }
 .social-list-item {
     height: 40px;
     width: 40px;
-    
+    margin-top: 8px;
 }
 .social-list-link {
     width: 100%;
     height: 100%;
     background-color: var(--primary-background-color); 
-    display: block;
+    display: flex;
     border-radius: 50%;
+    align-items: center;
+    justify-content: center;
 }
     
 .social-list-icon {
