--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,9 @@ body{
     line-height: 1.5;
     letter-spacing: 0.02em;
     }
+    .link-activ:is(:hover,:focus){
+        color:var(--active-buttons-background);
+    }
 .contakt-phone, .contakt-mail {
     text-decoration: none;
     color: var(--primary-text-color);
@@ -202,6 +205,18 @@ margin-right: 40px;
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
 }
+.features-box-item{
+    background-color: #F4F4FD;
+    margin-bottom: 8px;
+}
+.features-icon {
+    width: 64px;
+    height: 64px;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    margin-left: 100px;
+}
+
 /* -----------------------------------------------------Наша робота------------------------------- */
 .section-work{
     padding-top: 0;
@@ -223,8 +238,10 @@ margin-right: 40px;
 }
 .team-item{
 background: #FFFFFF;
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+ 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 border-radius: 0px 0px 4px 4px;
+
 }
 .flex-team{
     display: flex;
@@ -240,11 +257,12 @@ border-radius: 0px 0px 4px 4px;
     display: flex;
     justify-content: center;
     gap: 24px;
+    margin-top: 8px;
 }
 .social-list-item {
     height: 40px;
     width: 40px;
-    margin-top: 8px;
+  
 }
 .social-list-link {
     width: 100%;
@@ -255,10 +273,55 @@ border-radius: 0px 0px 4px 4px;
     align-items: center;
     justify-content: center;
 }
+.social-list-link:is(:hover,:focus){
+    background-color: var(--active-buttons-background);
+}
     
 .social-list-icon {
-   
+    fill:#F4F4FD;
 }
+/* ---------------------customer------------------------------- */
+.customers{
+    padding-top: 105px;
+    padding-bottom: 120px;
+}
+.customers-title{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+}
+.customers-list{
+    display: flex;
+    gap: 24px;
+    margin-top: 72px;
+}
+.customers-menu {
+    width:calc((100%-120px)/6);
+}
+.customers-link{
+    display: block;
+    color: #8E8F99;
+    width: 168px;
+    height: 88px;
+    padding: 16px 32px;
+    border: 1px solid #8E8F99;
+    border-radius: 4px;  
+    width: 100%;
+    height: 100%;
+}
+.customers-icon {
+    fill: currentColor;
+    }
+.customers-link:is(:hover,:focus){
+    border-color:var(--active-buttons-background);
+    color: var(--active-buttons-background);
+}
+/* .customers-link:is(:hover,:focus) .customers-icon {
+    fill:var(--active-buttons-background) */
+/* } */
 /* -----------------------------------Footter--------------------------------------------------- */
 .footer {
     background-color: #2E2F42;
@@ -277,6 +340,42 @@ line-height: 1.16;
 color: #E7E9FC;
 margin-top: 16px;
 max-width: 264px;
+}
+.footer-container{
+    display: flex;
+    align-items: baseline;
+}
+.footer-social{
+    margin-left: 120px;
+}
+.footer-social-content{
+font-weight: 600;
+font-size: 16px;
+line-height:1.5;
+letter-spacing: 0.02em;
+color: #FFFFFF;
+}
+.footer-social-menu {
+    display: flex;
+    gap:16px;
+    margin-top:16px;
+}
+.footer-social-link {
+    width: 100%;
+    height:100%;
+    background: rgba(255, 255, 255, 0.1);
+    border:50%;
+    display:flex;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+}
+.footer-icon {
+    fill:currentColor;
+}
+.footer-social-link:is(:hover,:focus){
+    background: #31D0AA;
 }
 /* ---------------------------------------PORTFOLIO------------------------------------------------ */
 .header-portfolio{
@@ -316,6 +415,7 @@ margin: auto;
 .buttons-portfolio:focus {
       background-color: var(--active-buttons-background);
       color: var(--primary-licht-color);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .images-list{
     display: flex;
@@ -328,7 +428,10 @@ flex-basis:calc((100% - 48px)/3);
 background: #ffffff;
 border-bottom: 0.5px solid #F4F4FD;
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
-
+}
+.employees-list:is(:hover,:focus){
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
+0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .flex-element{
 justify-content: center;
